src/test/ui/cross-crate-macro-backtrace/main.stderr
error: invalid reference to argument `0` (no arguments given)
  --> $DIR/main.rs:16:5
   |
16 |     myprintln!("{}"); //~ ERROR in this macro
   |     ^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in a macro outside of the current crate

error: aborting due to previous error

